--- a/compiled/flipclock.css
+++ b/compiled/flipclock.css
@@ -37,7 +37,7 @@
 
 /* Main */
 .flip-clock-wrapper {
-  font: normal 11px "Helvetica Neue", Helvetica, sans-serif;
+  font: normal 11px "Century Gothic", Helvetica, sans-serif;
   -webkit-user-select: none; }
 
 .flip-clock-meridium {
