--- a/compiled/flipclock.css
+++ b/compiled/flipclock.css
@@ -74,7 +74,7 @@
   font-weight: bold;
   line-height: 87px;
   border-radius: 6px;
-  background: #fff;
+  background: #000;
 }
 
 .flip-clock-wrapper ul li {
