White Font Clock

--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@
 }
 
 .countdown.flip-clock-wrapper ul li a div div.inn {
-  background-color: #607D8B;
-  color: #F44336;
+  background-color: #000;
+  color: #FFFFFF;
   font-size: 120px;
   text-shadow: 0 1px 2px #000;
 }
@@ -49,7 +49,7 @@
   height: 20px;
   left: 20px;
   width: 20px;
-  background: #607D8B;
+  background: #000;
 }
 
 .countdown .flip-clock-divider {
@@ -66,7 +66,7 @@
 }
 
 .countdown .flip-clock-divider .flip-clock-label {
-  color: #F44336;
+  color: #FFFFFF;
   font-size: 30px;
   width: 232px;
 }
