--- a/css/style.css
+++ b/css/style.css
@@ -90,3 +90,87 @@
   font-size: 30px;
   width: 232px;
 }
+#flipclock
+{
+  height: 100px;
+  width: 900px;
+  position: absolute;
+  bottom: 90px;
+  left: 50%;
+  margin: -140 0 0 -250px;
+}
+#logo
+{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -125px 0 0 -125px;
+}
+#date
+{
+  font-size: 60pt; 
+  font-family: 'Century Gothic', 'Helvetica Neue'; 
+  color: #ffffff; 
+  font-weight: bold
+}
+#datediv
+{
+  padding-top: 25px;
+}
+#playbutton
+{
+  visibility: hidden;
+}
+.wrapper 
+{
+  width: 250px;
+  height: 250px;
+  text-align: center;
+}
+
+.wrapper img 
+{
+  margin: 4% 0;
+  height: 92%;
+  width: auto;
+  -webkit-transition: margin 0.3s, height 0.3s;
+  -moz-transition: margin 0.3s, height 0.3s;
+  -o-transition: margin 0.3s, height 0.3s;
+  transition: margin 0.3s, height 0.3s;
+}
+
+.wrapper img:hover 
+{
+  margin: 0;
+  height: 100%;
+  -webkit-transition: margin 0.3s, height 0.3s;
+  -moz-transition: margin 0.3s, height 0.3s;
+  -o-transition: margin 0.3s, height 0.3s;
+  transition: margin 0.3s, height 0.3s;
+}
+@font-face
+{
+  font-family: 'Century Gothic';
+  src: url('font/century-gothic.ttf'),
+  url('font/century-gothic.eot');
+}
+body  
+{
+  background-position: center;
+  background-size: cover;
+}
+@media only screen and (max-device-width: 480px)
+{
+  #playbutton
+  {
+    visibility: visible !important;
+    position: absolute;
+    bottom: 35%;
+    left: 50%;
+    margin: -125px 0 0 -125px;
+  }
+  #logo
+  {
+    top: 35% !important;
+  }
+}
