--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,9 @@ body
     bottom: 35%;
     left: 50%;
     margin: -100px 0 0 -150px;
+  }
+  #playbuttonimg
+  {
     width: 100px;
     height: 100px;
   }
